# live-game-player

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  Notification.cpp  Notification.h  Parameters.h  README.en.md  README.md  main.cpp  total.h
.github/workflows/: cmake.yml
app/: CMakeLists.txt  app.cpp  app.h
common/: CMakeLists.txt  Defs.h  EventDef.h  Parameters.h  TwoDMat.h  common.cpp  ref_ptr.h
common/notification/: CMakeLists.txt  Notification.cpp  Notification.h
document/: request.md  中期总结.md
fltk/: CMakeLists.txt  README.md
fltk/lib/msvc/x64/Debug/: fltk_formsd.lib  fltk_gld.lib  fltk_imagesd.lib  fltk_jpegd.lib  fltk_pngd.lib  fltk_zd.lib
fltk/lib/msvc/x64/Release/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
model/: CMakeLists.txt  model.cpp  model.h
view/: CMakeLists.txt  GameGUI.cpp  GameGUI.h  ViewCells.cpp  ViewCells.h  view.cpp  view.h
viewmodel/: CMakeLists.txt  viewmodel.cpp  viewmodel.h
